# minecraft

./: .gitignore  CMakeLists.txt  sprint.md
common/: vertex.shader
src/: camera.cpp  cube.cpp  main.cpp  map.cpp  quad.cpp  shader.cpp  terrain.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/include/: camera.h  cube.h  map.h  quad.h  shader.h  terrain.h  texture.h  vertex_array.h  vertex_buffer.h
src/include/world/: biome.h  map.h  renderer.h  terrain.h  terrain_cube.h
src/world/: biome.cpp  map.cpp  renderer.cpp
test/: map_test.cpp
